--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 My GPG public key.
-Key fingerprint = 493B DFF4 C18B 4DC6 8998 E592 E739 47FC 1B9F 87E4
+@gmail fingerprint = 493B DFF4 C18B 4DC6 8998 E592 E739 47FC 1B9F 87E4
+@cam fingerprint = C937 9F50 98B3 2505 8592 AA72 6EA3 F6CC 397F 89EA
